fix dark mode bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@ body {
 }
 
 .body-dark {
-  background-color: black;
+  background-color: #0d0906;
   color: white;
 }
 
