--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -23,12 +23,22 @@
     color: #5b48d1;
     height: 50px;
   }
+
+  .lightDark {
+    display: flex;
+    gap: 0.5vw;
+    align-items: center;
+    .lightDarkIcon {
+      color: #5b48d1;
+    }
+  }
+
   .switch {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    width: 62px;
-    height: 32px;
+    width: 45px;
+    height: 22px;
     display: inline-block;
     position: relative;
     border-radius: 50px;
@@ -41,12 +51,12 @@
   }
 
   .switch:before {
-    content: "on off";
+    content: "";
     display: block;
     position: absolute;
     z-index: 2;
-    width: 28px;
-    height: 28px;
+    width: 18px;
+    height: 18px;
     background: #fff;
     left: 2px;
     top: 2px;
@@ -68,6 +78,6 @@
   }
 
   .switch:checked:before {
-    left: 32px;
+    left: 25px;
   }
 }
